1.0.netpol/2.egress.yml
---
# Allow frontend pod to connect with only backend
# pod in only backend ns at only port 3000
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-a
  namespace: frontend
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchExpressions:
        - key: ns
          operator: In
          values: ["backend"]
      podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 3000
---
# Allow frontend pod to connect with only frontend
# pod in the same ns at only port 80
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-b
  namespace: frontend
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 80
---
# ✅ Union of above two
# ✅ example = example-a + example-b
# Allow frontend pod to connect with only backend
# pod in only backend ns at only port 3000 and
# Allow frontend pod to connect with only frontend
# pod in the same ns at only port 80
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example
  namespace: frontend
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values: ["backend"]
      podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 3000
  - to:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 80
